# propagate

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.zed/: settings.json
propagate/: batch_manager.py  build.py  config.py  db.py  executive_order.py  federal_register.py  federalregister.py  logging_config.py  main.py  models.py  prompts.py  run.py  run_history.py  summarize_eo.py  summary.py  util.py
tests/: test_db.py  test_run.py  test_run_history.py
web/: index.html  package-lock.json  package.json
web/public/: eo.json
web/src/: main.ts  public  style.css
