[project]
name = "propagate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.0",
  "anthropic>=0.49.0",
  "pypdf>=5.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.setuptools.packages.find]
include = ["propagate*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"propagate/prompts.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["propagate"]
